# otelTest

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  otel.py  pyproject.toml  render.yaml
oteltest/: __init__.py  mocked_process.py  otel.py
